// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders default container 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Container renders with borders but only white container has one 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-redVariant"
      data-testid="red-container"
    >
      red container
    </div>
  </div>
</div>
`;

exports[`Container renders with borders but only white container has one 2`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-greenVariant"
      data-testid="green-container"
    >
      green container
    </div>
  </div>
</div>
`;

exports[`Container renders with borders but only white container has one 3`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-whiteVariant PicassoContainer-bordered"
      data-testid="white-container"
    >
      white container
    </div>
  </div>
</div>
`;

exports[`Container renders with borders but only white container has one 4`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-yellowVariant"
      data-testid="yellow-container"
    >
      yellow container
    </div>
  </div>
</div>
`;

exports[`Container renders with borders but only white container has one 5`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-blueVariant"
      data-testid="blue-container"
    >
      blue container
    </div>
  </div>
</div>
`;

exports[`Container renders with borders but only white container has one 6`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-greyVariant"
      data-testid="grey-container"
    >
      grey container
    </div>
  </div>
</div>
`;
